<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout android:id="@+id/tvLinearLayout"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="#FFFFFFFF">
		<ScrollView android:id="@+id/svResult"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1.0"
		android:background="#ff654321"> 

        <TextView
            android:focusable="true"
			android:focusableInTouchMode="true"
            android:id="@+id/data_value"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/no_data"
            android:textSize="16sp"/>

		</ScrollView>
    <TableLayout android:id="@+id/TableLayout02"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_margin="0px"
		android:stretchColumns="0"
		android:layout_gravity="bottom"
		android:background="#ff654321">
		<TableRow>
			<EditText
    			android:id="@+id/edtSend"     
    			android:layout_width="fill_parent"    
    			android:layout_height="wrap_content"
    			android:layout_span="4"/>
			<Button android:id="@+id/btnSend"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/send"
				android:layout_gravity="bottom">
			</Button>
		</TableRow>	</TableLayout>
	<TableLayout android:background="#ff654321"
		             android:orientation="vertical" 
		             android:layout_width="fill_parent" 
		             android:layout_height="wrap_content">
		<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/btnSendq"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sendq"
				android:layout_gravity="bottom">
			</Button>		    
			<Button android:id="@+id/btnSendw"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sendw"
				android:layout_gravity="bottom">
			</Button>
			<Button android:id="@+id/btnSende"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sende"
				android:layout_gravity="bottom">
			</Button>		
		</TableRow>		
		<TableRow>
			<Button android:id="@+id/btnSenda"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/senda"
				android:layout_gravity="bottom">
			</Button>
			<Button android:id="@+id/btnSendno"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sendno"
				android:layout_gravity="bottom">
			</Button>
			<Button android:id="@+id/btnSendd"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sendd"
				android:layout_gravity="bottom">
			</Button>						
		</TableRow>			
		<TableRow>
			<Button android:id="@+id/btnSendz"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sendz"
				android:layout_gravity="bottom">
			</Button>		    
			<Button android:id="@+id/btnSends"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sends"
				android:layout_gravity="bottom">
			</Button>
			<Button android:id="@+id/btnSendx"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/sendx"
				android:layout_gravity="bottom">
			</Button>			
		</TableRow>	
		<TableRow>
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/send1"
				android:layout_gravity="bottom">
			</Button>		    
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/send2"
				android:layout_gravity="bottom">
			</Button>
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content"
				android:text="@string/send3"
				android:layout_gravity="bottom">
			</Button>			
		</TableRow>					
	</TableLayout>
</LinearLayout>